--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
-    <p align="left" style="text-indent: 40px">Working Paper (2025). <em>Substantially improved results are available compared to the Arxiv version. </em><font color="#8080FF"><font ><a href="2024/VeriPP/VeriPP_informs.pptx"><font color="#8080FF">[Slides]</font></a></font></font></p>
+    <p align="left" style="text-indent: 40px">Working Paper (2025).</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
