--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@ body,td,th {
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
 
 	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font>        </p>
-	    <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font></p>
-	    <p align="left" style="text-indent: 40px"><s>Ai no Hime (Steam)</s></p>
-        <p align="left" style="text-indent: 40px">&nbsp;</p>
+	    <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font>        </p>
+	    <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Advising</strong></font></i></p>
       <p align="left" style="text-indent: 40px">• Haibo Xiao (Undergraduate at Tsinghua University)</p>
       <p align="left" style="text-indent: 40px">• Hongxu Su (PhD student at HKUST(GZ) )</p>
@@ -80,7 +79,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
-    <p align="left" style="text-indent: 40px">In Submission (2025).</p>
+    <p align="left" style="text-indent: 40px">In submission (2025).</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
@@ -101,7 +100,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
-		<td height="486" colspan="2" valign="top">
+		<td height="324" colspan="2" valign="top">
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
@@ -117,10 +116,7 @@ body,td,th {
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td  valign="top" width="41%"><p>&nbsp;</p>
 		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
-		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="0000ff"><em>photography</em></font>, <font color="0000ff"><em>singing</em></font> and <font color="0000ff"><em>writing</em></font> as my main hobbies, and have developed new interests in <font color="8080ff"><em>orienteering</em></font>, <font color="8080ff"><em>gardening</em> and <em>sketching</em></font> during college years.</font></p>
-		<p align="left" style="text-indent: 40px">I have been growing a very lovely Chlorophytum comosum (spider plant) since Fall 2021 when I came to UIUC. The plant is named <em>The Cryptbloom</em>,	which simultaneously refers to my passion for research on blockchain &amp; Web3, my favorite <em>League of Legends</em> item, and a (zero-knowledge) lovely story related to the plant. A few plantlets named as <em>Cryptbloom Minors</em> are also growing separately.</p>
-		<p align="center"><img src="album/cryptbloom/240907.jpg" width="90%" alt=""/></p>
-	  <p align="center" ><font color="#8080FF"><font ><a href="album/cryptbloom/index.html"><font color="#8080FF">[Photo Album]</font></a></font></font></p></td>
+	  <p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="0000ff"><em>photography</em></font>, <font color="0000ff"><em>singing</em></font> and <font color="0000ff"><em>writing</em></font> as my main hobbies, and have developed new interests in <font color="8080ff"><em>orienteering</em></font>, <font color="8080ff"><em>gardening</em> and <em>sketching</em></font> during college years.</font></p></td>
 	</tr>
 </table>
 
