--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@ body,td,th {
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fifth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
         <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.        </p>
         <p align="left" style="text-indent: 40px">While I would like to pursue for a faculty or postdoc position in academia, with the awareness of the currently intense competition on the academic job market, I would anticipate to slightly extend my PhD timeline for a more solid research profile. I anticipate to graduate in 2026, depending on my research progress.</p>
+        <p align="left" style="text-indent: 40px">&nbsp;</p>
+      <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
+      <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font></p>
       <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td colspan="2" valign="top">
 		<!-- MSCellType="NavBody" -->
@@ -52,16 +55,20 @@ body,td,th {
 	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em> on which several famous blockchain projects as Bittensor and Flock are presented, </font>and published at the top-tier journal <font color="#0000FF"><em>Operations Research</em></font> in the field of OR/OM.</p></tr>
 	<tr>
 	  <td valign="top" width="40%"><p>&nbsp;</p>
-	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
-
-	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font>        </p>
-	    <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font>        </p>
-	    <p align="left" style="text-indent: 40px">&nbsp;</p>
+	    <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Academic Services</strong></font></i></p>
+      <p align="left" style="text-indent: 40px">• Invited to OR Talk by 运筹OR帷幄(OR China) for two talks in 2024.</p>
+      <p align="left" style="text-indent: 40px">• Facilitator in section Revenue &amp; Pricing, INFORMS Annual Meeting, 2021.</p>
+      <p align="left" style="text-indent: 40px">• Journal Reviewing: Operations Research.</p>
+      <p align="left" style="text-indent: 40px">• Conference Reviewing: ESA (2024)</p>
+      <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Advising</strong></font></i></p>
       <p align="left" style="text-indent: 40px">• Haibo Xiao (Undergraduate at Tsinghua University)</p>
       <p align="left" style="text-indent: 40px">• Hongxu Su (PhD student at HKUST(GZ) )</p>
-      <p align="left" style="text-indent: 40px">• Qiushi Han (Undergraduate at UIUC, visiting MIT)</p>
-      <p align="left" style="text-indent: 40px">• Renfei Tan (PhD student at MIT)</p></td>
+      <p align="left" style="text-indent: 40px">• Qiushi Han (Undergraduate at UIUC, → MIT ORC PhD)</p>
+      <p align="left" style="text-indent: 40px">• Renfei Tan (PhD student at MIT)</p>
+      <p align="left" style="text-indent: 40px">&nbsp;</p>
+      <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Teaching</strong></font></i></p>
+      <p align="left" style="text-indent: 40px">• Causal &amp; Statistical Inference, Fall 2018, Teaching Assistant, Tsinghua University.</p></td>
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Research</strong></font></i></p>
@@ -120,7 +127,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2025-02-03</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2025-04-30</font></i></p>
 
 </body>
 
