--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ body,td,th {
 	    <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Academic Services</strong></font></i></p>
       <p align="left" style="text-indent: 40px">• Invited to OR Talk by 运筹OR帷幄(OR China) for two talks in 2024.</p>
       <p align="left" style="text-indent: 40px">• Facilitator in section Revenue &amp; Pricing, INFORMS Annual Meeting, 2021.</p>
-      <p align="left" style="text-indent: 40px">• Journal Reviewing: Operations Research.</p>
+      <p align="left" style="text-indent: 40px">• Journal Reviewing: Operations Research (2025)</p>
       <p align="left" style="text-indent: 40px">• Conference Reviewing: ESA (2024)</p>
       <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Advising</strong></font></i></p>
-      <p align="left" style="text-indent: 40px">• Haibo Xiao (Undergraduate at Tsinghua University)</p>
+      <p align="left" style="text-indent: 40px">• Haibo Xiao (Undergraduate at Tsinghua, → Tsinghua PhD)</p>
       <p align="left" style="text-indent: 40px">• Hongxu Su (PhD student at HKUST(GZ) )</p>
       <p align="left" style="text-indent: 40px">• Qiushi Han (Undergraduate at UIUC, → MIT ORC PhD)</p>
       <p align="left" style="text-indent: 40px">• Renfei Tan (PhD student at MIT)</p>
