--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font> </font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Tentative Projects</font></i></p>
-	<p align="left" style="text-indent: 40px"><strong>Adaptive Peer Prediction for Truthful Feedback Elicitation</strong></p>
+	<p align="left" style="text-indent: 40px"><strong>Online Mechanism Design in Crowdsourcing Systems</strong></p>
 	<p align="left" style="text-indent: 40px">with David Simchi-Levi, Qiushi Han and Renfei Tan</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
