--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body,td,th {
 		
 <p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font><font color="8080FF"> </font> </p>
 <div align="center">
-  <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
+  <p><font color="#8080FF" >PhD Candidate (ABD), Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
   <p><span style="text-indent: 40px">Expected graduation: TBA (~2026)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
   
