--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body,td,th {
 </style>
 </head>
 
-<body bgcolor="lavender" text="#000000">
+<body bgcolor="#E0E0FF" text="#000000">
 <table width="100%" height="100%" border="1" cellpadding="4" cellspacing="4" bordercolor="#000060" bordercolorlight="#00FFFF" bordercolordark="#000080">
 	<!-- MSTableType="nolayout" -->
 	<tr>
