--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Research</strong></font></i></p>
 	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation </strong><font color="#8080FF"><font ><a href="https://pubsonline.informs.org/doi/full/10.1287/opre.2024.0865"><font color="#8080FF">[Link]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
-    <p align="left" style="text-indent: 40px"><font color="#0000FF">Operations Research</font> (2025)</p>
+    <p align="left" style="text-indent: 40px"><font color="#0000FF">Operations Research</font>, 73(4), 1944-1964, 2025.</p>
     <p align="left" style="text-indent: 40px"><font color="#0000FF">Best Paper Award, </font><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font></p>
     <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
