--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body,td,th {
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
-	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao (<em>he/him/his, they/them/their</em>), a&nbsp;fifth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
+	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao (<em>they/them/their, he/him/his</em>), a&nbsp;fifth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
         <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.        </p>
         <p align="left" style="text-indent: 40px">While I would like to pursue for a faculty or postdoc position in academia, with the awareness of the currently intense competition on the academic job market, I would anticipate to slightly extend my PhD timeline for a more solid research profile. I anticipate to graduate in 2026, depending on my research progress.</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -126,7 +126,7 @@ body,td,th {
 	  <p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="0000ff"><em>photography</em></font>, <font color="0000ff"><em>singing</em></font> and <font color="0000ff"><em>writing</em></font> as my main hobbies, and have developed new interests in <font color="8080ff"><em>orienteering</em></font>, <font color="8080ff"><em>gardening</em> and <em>sketching</em></font> during college years.</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p>
 	  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Miscellaneous</font></i></p>
-		<p align="left" style="text-indent: 40px">I use both pronouns of <em>he/him/his</em> and <em>they/them/their</em>. I slightly prefer the latter for a stereotype-free self-cognition; however, I am also fully comfortable with the former in traditional usage as I am gender-conforming.</p>
+		<p align="left" style="text-indent: 40px">I use both pronouns of <em>he/him/his</em> and <em>they/them/their</em>. I prefer the latter for a stereotype-free self-cognition; however, I am also comfortable with the former in traditional usage.</p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 </table>
