--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body,td,th {
 	  <p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="0000ff"><em>photography</em></font>, <font color="0000ff"><em>singing</em></font> and <font color="0000ff"><em>writing</em></font> as my main hobbies, and have developed new interests in <font color="8080ff"><em>orienteering</em></font>, <font color="8080ff"><em>gardening</em> and <em>sketching</em></font> during college years.</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p>
 	  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Miscellaneous</font></i></p>
-		<p align="left" style="text-indent: 40px">I use both pronouns of <em>he/him/his</em> and <em>they/them/theirs</em>. I prefer the latter for a stereotype-free self-cognition; however, I am also comfortable with the former in traditional usage.</p>
+		<p align="left" style="text-indent: 40px">I use both pronouns of <em>they/them/theirs</em> and <em>he/him/his</em>. I prefer the former for a stereotype-free self-cognition; however, I am also comfortable with the latter in traditional usage.</p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 </table>
