--- a/index.html
+++ b/index.html
@@ -101,12 +101,17 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font > <font >CVMJ 2021</font></font></p>
 	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font> </font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Tentative Projects</font></i></p>
+	<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Working Projects</font></i>	</p>
+	<p align="left" style="text-indent: 40px"><strong>T’AIMER: Trustworthy AI Multi-round pEer veRification mechanism</strong></p>
+    <p align="left" style="text-indent: 40px"><em>(Collaborators TBA)</em></p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>Online Mechanism Design in Crowdsourcing Systems</strong></p>
 	<p align="left" style="text-indent: 40px">with David Simchi-Levi, Qiushi Han and Renfei Tan</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>T’AIMER: Trustworthy AI Multi-round pEer veRification mechanism</strong></p>
-	<p align="left" style="text-indent: 40px"><em>(Collaborators TBA)</em></p>
+	<p align="left" style="text-indent: 40px"><strong>VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference</div>
+</strong></p>
+	<p align="left" style="text-indent: 40px">with Gradient Network</p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
@@ -134,7 +139,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2025-09-18</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2025-09-28</font></i></p>
 
 </body>
 
