--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
     <p align="left" style="text-indent: 40px">In submission (2025).</p>
+    <p align="left" style="text-indent: 40px">&nbsp;</p>
+    <p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
+    <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
+    <p align="left" style="text-indent: 40px">In submission (2025).</p>
+    <p align="left" style="text-indent: 40px">&nbsp;</p>
+    <p align="left" style="text-indent: 40px"><strong>VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference </strong> <font color="#8080FF"><font ><a href="https://www.arxiv.org/abs/2509.24257"><font color="#8080FF">[Arxiv]</font></a></font></font></p> 
+    <p align="left" style="text-indent: 40px">with Gradient Network</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
@@ -108,9 +115,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><strong>Online Mechanism Design in Crowdsourcing Systems</strong></p>
 	<p align="left" style="text-indent: 40px">with David Simchi-Levi, Qiushi Han and Renfei Tan</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference</div>
-</strong></p>
-	<p align="left" style="text-indent: 40px">with Gradient Network</p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
