--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body,td,th {
     <p align="left" style="text-indent: 40px">In submission (2025).    </p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
     <p align="left" style="text-indent: 40px"><strong>VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference </strong> <font color="#8080FF"><font ><a href="https://www.arxiv.org/abs/2509.24257"><font color="#8080FF">[Arxiv]</font></a></font></font></p> 
-    <p align="left" style="text-indent: 40px">with Gradient Network</p>
+    <p align="left" style="text-indent: 40px">Ke Wang, <u>Zishuo Zhao</u>, Xinyuan Song, Bill Shi, Libin Xia, Chris Tong, Lynn Ai, Felix Qu, Eric Yang</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
@@ -105,7 +105,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font> </font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Working Projects</font></i>	</p>
-	<p align="left" style="text-indent: 40px"><strong>T’AIMER: Trustworthy AI Multi-round pEer veRification mechanism</strong></p>
+	<p align="left" style="text-indent: 40px"><strong>T’AIMER: Trustworthy AI Model pEer veRification mechanism</strong></p>
     <p align="left" style="text-indent: 40px"><em>(Collaborators TBA)</em></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>Online Mechanism Design in Crowdsourcing Systems</strong></p>
@@ -140,7 +140,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2025-09-28</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2025-10-30</font></i></p>
 
 </body>
 
