--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body,td,th {
 <table width="100%" height="100%" border="1" cellpadding="4" cellspacing="4" bordercolor="#000060" bordercolorlight="#00FFFF" bordercolordark="#000080">
 	<!-- MSTableType="nolayout" -->
 	<tr>
-		<td height="160" colspan="3" valign="top">
+		<td height="160" colspan="4" valign="top">
 		<!-- MSCellType="ContentHead" -->
 		
 <p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font><font color="8080FF"> </font> </p>
@@ -42,7 +42,7 @@ body,td,th {
       <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
       <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font></p>
       <p align="left" style="text-indent: 40px">&nbsp;</p></td>
-		<td colspan="2" valign="top">
+		<td colspan="3" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Research Statement</strong></font></i> </p>
@@ -69,7 +69,7 @@ body,td,th {
       <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Teaching</strong></font></i></p>
       <p align="left" style="text-indent: 40px">• Causal &amp; Statistical Inference, Fall 2018, Teaching Assistant, Tsinghua University.</p></td>
-	  <td colspan="2" valign="top">
+	  <td colspan="3" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Research</strong></font></i></p>
 	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation </strong><font color="#8080FF"><font ><a href="https://pubsonline.informs.org/doi/full/10.1287/opre.2024.0865"><font color="#8080FF">[Link]</font></a></font></font></p>
@@ -105,10 +105,10 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font> </font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Working Projects</font></i>	</p>
-	<p align="left" style="text-indent: 40px"><strong>T’AIMER: Trustworthy AI Model pEer veRification mechanism</strong></p>
+	<p align="left" style="text-indent: 40px"><strong>T’AIMER: Trustworthy AI Model pEer veRification mechanism</strong> (ETA: 1~3 years)</p>
     <p align="left" style="text-indent: 40px"><em>(Collaborators TBA)</em></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>Online Mechanism Design in Crowdsourcing Systems</strong></p>
+	<p align="left" style="text-indent: 40px"><strong>Online Mechanism Design in Crowdsourcing Systems</strong> (ETA: early 2026)</p>
 	<p align="left" style="text-indent: 40px">with David Simchi-Levi, Qiushi Han and Renfei Tan</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -116,7 +116,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
-		<td height="324" colspan="2" valign="top">
+		<td height="324" colspan="3" valign="top">
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
