--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,td,th {
 <div align="center">
   <p><font color="#8080FF" >PhD Candidate (ABD), Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
-  <p><span style="text-indent: 40px">Expected graduation: TBA (~2026)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
+  <p><span style="text-indent: 40px">Expected graduation: 2026&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
   
 </div>
 	<p>&nbsp;</p></td>
@@ -37,7 +37,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao (<em>they/them/theirs, he/him/his</em>), a&nbsp;fifth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
         <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.        </p>
-        <p align="left" style="text-indent: 40px">While I would like to pursue for a faculty or postdoc position in academia, with the awareness of the currently intense competition on the academic job market, I would anticipate to slightly extend my PhD timeline for a more solid research profile. I anticipate to graduate in 2026, depending on my research progress.</p>
+        <p align="left" style="text-indent: 40px">I anticipate to graduate in 2026.</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
       <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font></p>
@@ -88,6 +88,9 @@ body,td,th {
     <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
     <p align="left" style="text-indent: 40px">In submission (2025).    </p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
+    <p align="left" style="text-indent: 40px"><strong>Multi-agent Adaptive Mechanism Design</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2512.21794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
+    <p align="left" style="text-indent: 40px">Qiushi Han*, David Simchi-Levi*, Renfei Tan*, <u>Zishuo Zhao</u>.</p>
+    <p align="left" style="text-indent: 40px">&nbsp;</p>
     <p align="left" style="text-indent: 40px"><strong>VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference </strong> <font color="#8080FF"><font ><a href="https://www.arxiv.org/abs/2509.24257"><font color="#8080FF">[Arxiv]</font></a></font></font></p> 
     <p align="left" style="text-indent: 40px">Ke Wang, <u>Zishuo Zhao</u>, Xinyuan Song, Bill Shi, Libin Xia, Chris Tong, Lynn Ai, Felix Qu, Eric Yang</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -107,12 +110,6 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Working Projects</font></i>	</p>
 	<p align="left" style="text-indent: 40px"><strong>T’AIMER: Trustworthy AI Model pEer veRification mechanism</strong> (ETA: 1~3 years)</p>
     <p align="left" style="text-indent: 40px"><em>(Collaborators TBA)</em></p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>Online Mechanism Design in Crowdsourcing Systems</strong> (ETA: early 2026)</p>
-	<p align="left" style="text-indent: 40px">with David Simchi-Levi, Qiushi Han and Renfei Tan</p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
@@ -140,7 +137,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2025-10-30</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2025-12-31</font></i></p>
 
 </body>
 
