--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body,td,th {
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
       <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font></p>
+      <p align="left" style="text-indent: 40px">wiku30.0 [at] gmail.com</p>
       <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td colspan="3" valign="top">
 		<!-- MSCellType="NavBody" -->
