--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ body,td,th {
 		
 <p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font><font color="8080FF"> </font> </p>
 <div align="center">
-  <p><font color="#8080FF" >PhD Candidate (ABD), Industrial Engineering, University of Illinois Urbana-Champaign
+  <p><font color="#8080FF" >PhD, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
-  <p><span style="text-indent: 40px">Expected graduation: 2026&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
+  <p><span style="text-indent: 40px">&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
   
 </div>
 	<p>&nbsp;</p></td>
@@ -35,9 +35,9 @@ body,td,th {
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
-	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao (<em>they/them/theirs, he/him/his</em>), a&nbsp;fifth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
+	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a PhD  in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
         <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.        </p>
-        <p align="left" style="text-indent: 40px">I anticipate to graduate in 2026.</p>
+        <p align="left" style="text-indent: 40px">I defended my PhD thesis in Jan 2026.</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
       <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font></p>
@@ -138,7 +138,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2025-12-31</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 202<em>6</em>-01-09</font></i></p>
 
 </body>
 
