--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body,td,th {
     <p align="left" style="text-indent: 40px">In submission (2025).    </p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
     <p align="left" style="text-indent: 40px"><strong>Multi-agent Adaptive Mechanism Design</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2512.21794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
-    <p align="left" style="text-indent: 40px">Qiushi Han*, David Simchi-Levi*, Renfei Tan*, <u>Zishuo Zhao</u>.</p>
+    <p align="left" style="text-indent: 40px">Qiushi Han*, David Simchi-Levi*, Renfei Tan*, <u>Zishuo Zhao</u>* (alphabetical order)</p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
     <p align="left" style="text-indent: 40px"><strong>VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference </strong> <font color="#8080FF"><font ><a href="https://www.arxiv.org/abs/2509.24257"><font color="#8080FF">[Arxiv]</font></a></font></font></p> 
     <p align="left" style="text-indent: 40px">Ke Wang, <u>Zishuo Zhao</u>, Xinyuan Song, Bill Shi, Libin Xia, Chris Tong, Lynn Ai, Felix Qu, Eric Yang</p>
