--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@ body,td,th {
         <p align="left" style="text-indent: 40px">I defended my PhD thesis in Jan 2026.</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
-      <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font></p>
       <p align="left" style="text-indent: 40px">wiku30.0 [at] gmail.com</p>
       <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td colspan="3" valign="top">
@@ -93,7 +92,7 @@ body,td,th {
     <p align="left" style="text-indent: 40px">Qiushi Han*, David Simchi-Levi*, Renfei Tan*, <u>Zishuo Zhao</u>* (alphabetical order)</p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
     <p align="left" style="text-indent: 40px"><strong>VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference </strong> <font color="#8080FF"><font ><a href="https://www.arxiv.org/abs/2509.24257"><font color="#8080FF">[Arxiv]</font></a></font></font></p> 
-    <p align="left" style="text-indent: 40px">Ke Wang, <u>Zishuo Zhao</u>, Xinyuan Song, Bill Shi, Libin Xia, Chris Tong, Lynn Ai, Felix Qu, Eric Yang</p>
+    <p align="left" style="text-indent: 40px">Ke Wang*, <u>Zishuo Zhao</u>*, Xinyuan Song, Zelin Li, Libin Xia, Chris Tong, Bill Shi, Wenjie Qu, Eric Yang, Lynn Ai (equal contribution)</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
@@ -138,7 +137,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 202<em>6</em>-01-09</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2026-01-22</font></i></p>
 
 </body>
 
