--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a PhD  in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
         <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.        </p>
-        <p align="left" style="text-indent: 40px">I defended my PhD thesis in Jan 2026.</p>
+        <p align="left" style="text-indent: 40px">I defended my PhD thesis in Jan 2026. <a href="2026/PhD_Thesis.pdf"><font color="8080FF">[Thesis Link]</font></a></p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
       <p align="left" style="text-indent: 40px">wiku30.0 [at] gmail.com</p>
