--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body,td,th {
       <p align="left" style="text-indent: 40px">• Invited to OR Talk by 运筹OR帷幄(OR China) for two talks in 2024.</p>
       <p align="left" style="text-indent: 40px">• Facilitator in section Revenue &amp; Pricing, INFORMS Annual Meeting, 2021.</p>
       <p align="left" style="text-indent: 40px">• Journal Reviewing: Operations Research (2025)</p>
-      <p align="left" style="text-indent: 40px">• Conference Reviewing: ESA (2024)</p>
+      <p align="left" style="text-indent: 40px">• Conference Reviewing: ICML (2026), ESA (2024)</p>
       <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Advising</strong></font></i></p>
       <p align="left" style="text-indent: 40px">• Haibo Xiao (Undergraduate at Tsinghua, → Tsinghua PhD)</p>
@@ -137,7 +137,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2026-01-22</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2026-01-30</font></i></p>
 
 </body>
 
